Vertex-Vertex Retained Mode

--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0.33467140793800354,
-      -0.9375326633453369,
-      0.08276526629924774,
-      -0.04666374996304512
+      0,
+      0,
+      0,
+      1
     ],
-    "magnitude": 1,
+    "magnitude": 0.5773502588272095,
     "position": [
-      1260.47314453125,
-      246.32244873046875,
-      337.3073425292969
+      640,
+      360,
+      1886.4425048828125
     ]
   },
   "radius": 793.2212524414062,
