--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0,
-      0,
-      0,
-      1
+      0.33080342411994934,
+      0.12770405411720276,
+      0.3696400225162506,
+      0.858852207660675
     ],
-    "magnitude": 0.5773502588272095,
+    "magnitude": 1,
     "position": [
-      640,
-      360,
-      1886.4425048828125
+      852.9459228515625,
+      180.54246520996094,
+      559.2941284179688
     ]
   },
   "radius": 793.2212524414062,
